coq_translation/axiomatized/examples/conversion/parsing_a_string.err
error[E0284]: type annotations needed
 --> examples/conversion/parsing_a_string.rs:4:18
  |
4 |     "unparsable".parse(); // we need the generics to know the type at compilation time
  |                  ^^^^^ cannot infer type of the type parameter `F` declared on the method `parse`
  |
  = note: cannot satisfy `<_ as std::str::FromStr>::Err == _`
help: consider specifying the generic argument
  |
4 |     "unparsable".parse::<F>(); // we need the generics to know the type at compilation time
  |                       +++++

thread 'rustc' panicked at 'thir failed to compile', lib/src/top_level.rs:674:9
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: aborting due to previous error

For more information about this error, try `rustc --explain E0284`.
